# interproscan-reader

./: Cargo.toml  README.md  small.gff3
.github/workflows/: release.yaml
src/: main.rs  opt.rs  reader.rs  records.rs  utils.rs
src/parser/: ast.rs  expr.rs  lex.rs  mod.rs
