[package]
name = "interproscan-reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.22"
log = "0.4.14"
pest = "2.1.3"
pretty_env_logger = "0.4.0"
regex = "1.5.4"
structopt = "0.3.26"
